# Neo

./: .gitignore  CMakeLists.txt  CMakePresets.json
Editor/: CMakeLists.txt
Editor/Include/: Editor.hpp  EditorBackend.hpp
Editor/Include/Panel/: DetailsPanel.hpp  IEditorPanel.hpp  OutlinerPanel.hpp  ViewportPanel.hpp
Editor/Source/: Editor.cpp  EditorBackend.cpp
Editor/Source/Panel/: DetailsPanel.cpp  OutlinerPanel.cpp  ViewportPanel.cpp
Engine/: CMakeLists.txt
Engine/Include/App/: App.hpp  AppImpl.hpp
Engine/Include/Core/: Components.hpp  Core.hpp  Device.hpp  ECS.hpp  Engine.hpp  FileIO.hpp  Renderer.hpp  Resources.hpp  Scripting.hpp
Engine/Include/Project/: ProjectBuilder.hpp
Engine/Include/Render/: RenderComponents.hpp  RenderConstants.hpp  RenderContext.hpp  RenderEnums.hpp  RenderStructs.hpp
Engine/Include/Render/DX12/: HelpersDX12.hpp  RenderContextDX12.hpp  RenderStructsDX12.hpp
Engine/Include/Resources/: Resource.hpp
Engine/Include/Tools/: Importer.hpp  Log.hpp  Serializer.hpp  Tools.hpp  Warnings.hpp
Engine/Shaders/: GeomPS.hlsl  GeomVS.hlsl
Engine/Source/Core/: Device.cpp  ECS.cpp  Engine.cpp  EnginePCH.hpp  FileIO.cpp  Generated.hpp  Renderer.cpp  Resources.cpp  Scripting.cpp
Engine/Source/Project/: ProjectBuilder.cpp
Engine/Source/Render/DX12/: RenderContextDX12.cpp
Engine/Source/Tools/: Importer.cpp  Log.cpp
PreBuildTool/: .gitignore  Directory.Build.props  Metadata.cs  Parser.cs  PreBuildTool.csproj  PreBuildTool.sln  Program.cs
Sandbox/: Sandbox.csproj  Sandbox.proj
Sandbox/Assets/: Directory.build.props
Sandbox/Assets/Models/Drift/: Drift.gltf
Sandbox/Assets/Scripts/: Internal.cs  Program.cs  Test.cs
Scripts/Python/: GenerateShaders.py
