FILE(GLOB_RECURSE ENGINE_SOURCES Source/*.cpp)
add_library(Engine STATIC ${ENGINE_SOURCES})
target_include_directories(Engine PUBLIC Include)
target_precompile_headers(Engine PUBLIC Source/Core/EnginePCH.hpp)
add_subdirectory(External)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(Engine PUBLIC NEO_DEBUG)
else ()
    target_compile_definitions(Engine PUBLIC NEO_RELEASE)
endif ()